Remove Java 19 code